# unsafe_study

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  REFACTOR_PLAN.md  REMAINING_TASKS.md  WORKSPACE_MAP.md  rust-toolchain.toml  unsafe-audit.toml
cargo-unsafe-audit/: Cargo.toml
cargo-unsafe-audit/src/: analyzer.rs  api_discovery.rs  corpus_gen.rs  fuzz.rs  fuzz_runner.rs  geiger.rs  harness_gen.rs  main.rs  miri.rs  miri_runner.rs  models.rs  report_gen.rs
crate_test_fuzz/: README.md
crate_test_fuzz/bstr/: Cargo.toml
crate_test_fuzz/bstr/fuzz_targets/: bstr_decode_grapheme.rs  bstr_whitespace_len_fwd.rs
crate_test_fuzz/serde_json/: Cargo.toml
docs/: README.md
docs/proposal/: proposal.tex  proposal.txt
docs/report/: crate_selection.md  final_report.md  new_target_findings.md  new_targets_pipeline.md  study_report.md  (+2 more)
evidence/: README.md
extensions_harness/: Cargo.toml
extensions_harness/tests/: api_smoke.rs  more_crates.rs  simd_json_triage.rs
fuzz_harnesses/: Cargo.toml  README.md
fuzz_harnesses/goblin/: Cargo.toml
fuzz_harnesses/goblin/fuzz_targets/: goblin_elf_parse.rs  goblin_mach_parse.rs  goblin_object_parse.rs  goblin_pe_parse.rs
fuzz_harnesses/memchr/: Cargo.toml
fuzz_harnesses/memchr/fuzz_targets/: memchr_memmem_edges.rs  memchr_offset_windows.rs  memchr_unaligned_public.rs
fuzz_harnesses/pulldown-cmark/: Cargo.toml
fuzz_harnesses/pulldown-cmark/corpus/pulldown_cmark_events/: basic.md
fuzz_harnesses/pulldown-cmark/corpus/pulldown_cmark_offsets/: basic.md
fuzz_harnesses/pulldown-cmark/fuzz_targets/: pulldown_cmark_events.rs  pulldown_cmark_offsets.rs  pulldown_cmark_parse.rs
fuzz_harnesses/quick-xml/: Cargo.toml
fuzz_harnesses/quick-xml/corpus/quick_xml_attributes/: basic.xml
fuzz_harnesses/quick-xml/corpus/quick_xml_ns_read/: basic.xml
fuzz_harnesses/quick-xml/fuzz_targets/: quick_xml_attributes.rs  quick_xml_ns_read.rs  quick_xml_read.rs
fuzz_harnesses/roxmltree/: Cargo.toml
fuzz_harnesses/roxmltree/corpus/roxmltree_children/: basic.xml
fuzz_harnesses/roxmltree/corpus/roxmltree_node_ids/: basic.xml
fuzz_harnesses/roxmltree/corpus/roxmltree_positions/: basic.xml
fuzz_harnesses/roxmltree/fuzz_targets/: roxmltree_children.rs  roxmltree_node_ids.rs  roxmltree_positions.rs
fuzz_harnesses/serde_json/: Cargo.toml
fuzz_harnesses/serde_json/fuzz_targets/: error_positions.rs  from_str.rs  stream_values.rs
fuzz_harnesses/simd-json/: Cargo.toml
fuzz_harnesses/simd-json/corpus/simd_json_borrowed_container_strings/: basic.json
fuzz_harnesses/simd-json/corpus/simd_json_owned_escape_heavy_strings/: basic.json
fuzz_harnesses/simd-json/fuzz_targets/: simd_json_borrowed_container_strings.rs  simd_json_owned_escape_heavy_strings.rs  simd_json_tape_lazy_upgrade.rs  simd_json_unaligned_input_offset.rs
fuzz_harnesses/toml_edit/: Cargo.toml
fuzz_harnesses/toml_edit/corpus/toml_edit_mutate/: basic.toml
fuzz_harnesses/toml_edit/corpus/toml_edit_roundtrip/: basic.toml
fuzz_harnesses/toml_edit/fuzz_targets/: toml_edit_mutate.rs  toml_edit_parse.rs  toml_edit_roundtrip.rs
fuzz_harnesses/toml_parser/: Cargo.toml
fuzz_harnesses/toml_parser/corpus/toml_parser_decode/: basic.toml
fuzz_harnesses/toml_parser/corpus/toml_parser_value/: basic.toml
fuzz_harnesses/toml_parser/fuzz_targets/: toml_parser_decode.rs  toml_parser_parse.rs  toml_parser_value.rs
fuzz_harnesses/winnow/: Cargo.toml
fuzz_harnesses/winnow/corpus/winnow_pairs/: basic.txt
fuzz_harnesses/winnow/corpus/winnow_partial/: basic.txt
fuzz_harnesses/winnow/fuzz_targets/: winnow_pairs.rs  winnow_parse.rs  winnow_partial.rs
fuzz_targets/: bstr_fuzz_ops.rs  httparse_fuzz_request.rs  httparse_fuzz_response.rs  serde_json_fuzz_from_slice.rs  serde_json_fuzz_from_str.rs
geiger_reports/: bstr_annotations.md  goblin_annotations.md  memchr_annotations.md  pulldown-cmark.json  pulldown-cmark.txt  pulldown-cmark_annotations.md  quick-xml.json  quick-xml.txt  quick-xml_annotations.md  roxmltree.txt  roxmltree_annotations.md  simd-json.txt  simd-json_annotations.md  toml_edit.json  toml_edit.txt  toml_edit_annotations.md  toml_parser_annotations.md
miri_harnesses/: Cargo.toml  README.md
miri_reports/: simd_json_triage.md
proposal/: proposal.md
report/: crate_selection.md  final_report.md  new_target_findings.md  new_targets_pipeline.md  simd_json_stacked_borrows_explainer.md  simd_json_upstream_issue_draft.md  study_report.md
scripts/: make_demo_video.sh  run_all.ps1  run_all.sh  run_fuzz.sh  summarize_geiger.py
study/: FULL_RUN_GUIDE.md  README.md  manifest.accept.toml  manifest.env-rerun.toml  manifest.toml
unsafe-audit/: Cargo.toml
unsafe-audit/src/: analyzer.rs  app.rs  audit_cli.rs  cli.rs  config.rs  console.rs  coverage.rs  coverage_backend.rs  coverage_cli.rs  domain.rs  explore.rs  fs.rs  fuzz.rs  geiger.rs  infra.rs  lib.rs  main.rs  main_tests.rs  miri.rs  models.rs  phases.rs  report.rs  report_gen.rs  runner.rs  scan.rs  study.rs  study_cli.rs
unsafe-audit/src/analyzer/: classify.rs  mod.rs  summary.rs  visitor.rs
unsafe-audit/src/analyzer/visitor/: aliases.rs  model.rs  tests.rs
unsafe-audit/src/coverage/: llvm.rs  location.rs  matching.rs  summary.rs  tests.rs
unsafe-audit/src/coverage_backend/: fuzz.rs  llvm.rs  miri.rs
unsafe-audit/src/domain/: common.rs  coverage.rs  exploration.rs  fuzz.rs  geiger.rs  miri.rs  report.rs
unsafe-audit/src/explore/: harness.rs  miri.rs  reach.rs
unsafe-audit/src/phases/: fuzz.rs  geiger.rs  miri.rs  mod.rs
unsafe-audit/src/phases/fuzz/: classify.rs  runner.rs  targets.rs
unsafe-audit/src/render/: cross_phase.rs  exploration.rs  json.rs  markdown.rs  mod.rs  phases.rs
unsafe-audit/src/render/phases/: fuzz.rs  geiger.rs  miri.rs  patterns.rs  shared.rs
unsafe-audit/src/study/: coverage.rs  crate_run.rs  fuzz_group.rs  fuzz_plan.rs  manifest.rs  miri_case.rs  options.rs  output.rs  render.rs  resume.rs  runtime.rs  summary.rs  tests.rs
unsafe-audit/src/tests/: config_tests.rs  fs_tests.rs  lib_tests.rs  phases_tests.rs  report_tests.rs  runner_tests.rs  scan_tests.rs
(+74 files in other folders)
