[package]
name = "cargo-unsafe-audit"
version = "0.1.0"
edition = "2021"
description = "Audit Rust crates for unsafe code patterns, Miri UB, and fuzz robustness"

[[bin]]
name = "cargo-unsafe-audit"
path = "src/main.rs"

[[bin]]
name = "unsafe-audit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
colored = "2"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
