[package]
name = "unsafe-audit"
version = "0.1.0"
edition = "2021"
description = "Audit Rust crates for unsafe code: Geiger + Miri + Fuzz + Pattern Analysis"

[[bin]]
name = "unsafe-audit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
walkdir = "2"
tempfile = "3"

[dev-dependencies]
