[package]
name = "toml-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toml_parser = { path = "../../targets/toml_parser", features = ["unsafe"] }

[[bin]]
name = "toml_parser_parse"
path = "fuzz_targets/toml_parser_parse.rs"
test = false
doc = false

[[bin]]
name = "toml_parser_decode"
path = "fuzz_targets/toml_parser_decode.rs"
test = false
doc = false

[[bin]]
name = "toml_parser_value"
path = "fuzz_targets/toml_parser_value.rs"
test = false
doc = false